# coastal-engineering-with-rust-tutorials

./: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  data.json
.claude/agents/: coastal-engineering-prof.md  rust-expert-teacher.md
previous_chapters/chapter_3/3_1/src/: data.rs  main.rs
previous_chapters/chapter_3/3_1/src/utils/: print.rs
previous_chapters/chapter_3/3_2/: Cargo.toml
previous_chapters/chapter_3/3_2/src/: waves.rs
previous_chapters/chapter_3/3_3/src/: main.rs  visualization.rs
previous_chapters/chapter_3/3_4/: Cargo.toml
previous_chapters/chapter_3/3_4/src/: main.rs  tide_prediction.rs
previous_chapters/chapter_4/4_1/src/: data_fetcher.rs  extreme_analysis.rs
previous_weeks/week_1/src/: data_generator.rs
previous_weeks/week_2/src/: data_generator.rs  errors.rs
previous_weeks/week_3/: Cargo.toml
previous_weeks/week_3/src/: canadian_waters.rs  wave_generation.rs
src/: data.rs  extreme_value_analysis.rs  main.rs  spectral_analysis.rs  visualization.rs  wave_climate.rs  wave_stats.rs
src/week_1/: data.rs  data_generator.rs  mod.rs  visualization.rs
tutorials/: 00_course_overview.md  tutorial_3_1_wave_statistics.md  tutorial_3_2_spectral_analysis.md  tutorial_3_3_wave_generation.md  tutorial_3_4_tide_prediction.md  tutorial_4_1_wave_climate_analysis.md  tutorial_4_2_extreme_value_statistics.md  tutorial_4_3_seasonal_wave_patterns.md
