[package]
name = "coastal_dynamics"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.16"
plotters = "0.3"
rand = "0.9.2"
rand_distr = "0.5.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
needless_return = "allow"
manual_range_patterns = "allow"
